
plugins {
	id 'org.springframework.boot' version '2.4.0-M1'
	id 'io.spring.dependency-management' version '1.0.9.RELEASE'
	id 'java'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '13.0.2'

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

tasks.withType(JavaCompile) {
	options.compilerArgs += "--enable-preview"
}

tasks.withType(Test) {
	jvmArgs += "--enable-preview"
}

tasks.withType(JavaExec) {
	jvmArgs += '--enable-preview'
}


repositories {
	mavenCentral()
	maven { url 'https://repo.spring.io/milestone' }
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'junit:junit:4.12'
	compile group: 'org.springframework.boot', name: 'spring-boot-starter'
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation('org.junit.jupiter:junit-jupiter-api')
	testCompile('org.junit.jupiter:junit-jupiter-params')
	testRuntime('org.junit.jupiter:junit-jupiter-engine')
	compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.11.0'
	testCompile group: 'org.mockito', name: 'mockito-core'
	testCompile group: 'org.mockito', name: 'mockito-junit-jupiter'
	compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.13.3'
	compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.13.3'
}


test {
	useJUnitPlatform()
}
